--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <title>Public WiFi Locations in Pittsburgh</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.css" rel="stylesheet">
     <style>
         #map {
             position: absolute;
@@ -57,27 +60,6 @@
             width: 100% !important;
             height: 50%; /* Set height of chart */
         }
-
-        #chart-list {
-            list-style-type: none;
-            padding: 0;
-            margin-top: 20px; /* Adjust margin */
-            overflow-y: auto;
-            max-height: 150px; /* Set max height */
-        }
-
-        #chart-list li {
-            cursor: pointer;
-            padding: 5px;
-        }
-
-        #chart-list li:hover {
-            background-color: #f0f0f0;
-        }
-        
-        #chart-list input[type=checkbox] {
-            margin-right: 5px;
-        }
     </style>
 </head>
 <body>
@@ -86,9 +68,8 @@
     <h2>Public WiFi Locations in Pittsburgh</h2>
     <h3> (hover over the red dots for location details)</h3>
     <button class="button" id="locationDetailsButton">Location Details</button>
-    <button class="button" id="accountRequiredButton">Account Required</button>
+    <button class="button" id="accountRequiredButton">Public Notes</button>
     <canvas id="chart"></canvas>
-    <ul id="chart-list"></ul> <!-- Container for list of x-axis elements -->
 </div>
 <div id="toggleDashboard">Toggle Dashboard</div>
 
@@ -124,7 +105,7 @@
             type: 'symbol',
             source: 'public-wifi',
             layout: {
-                'icon-image': 'circle-15', // Use a predefined circle icon
+                'icon-image': 'circle', // Use a predefined circle icon
                 'icon-size': 1.5 // Increase the icon size
             }
         });
@@ -163,16 +144,20 @@
 
         // Define button click events
         document.getElementById('locationDetailsButton').addEventListener('click', function () {
-            generateLineChart('LocationDetails');
+            generateLineChart('LocationDetails', 'Occurrences of location types', 'rgba(255, 206, 86, 1)'); // Change label and color for location details
         });
 
         document.getElementById('accountRequiredButton').addEventListener('click', function () {
-            generateLineChart('PublicNotes');
+            generateLineChart('PublicNotes', 'Occurrences of public notes', 'rgba(54, 162, 235, 1)'); // Change label and color for public notes
+        });
+
+        document.getElementById('locationHoursButton').addEventListener('click', function () {
+            generateDonutChart('LocationHours'); // Generate donut chart for LocationHours
         });
     });
 
     // Function to generate line chart based on property values
-    function generateLineChart(property) {
+    function generateLineChart(property, label, color) {
         fetch('assets/public_wifi.geojson')
             .then(response => {
                 if (!response.ok) {
@@ -190,8 +175,7 @@
                 });
                 const labels = Object.keys(occurrences);
                 const values = Object.values(occurrences);
-                renderChart(labels, values);
-                renderList(labels); // Render list of x-axis elements
+                renderChart(labels, values, label, color); // Pass label and color to renderChart function
             })
             .catch(error => {
                 console.error('Error loading data:', error);
@@ -199,7 +183,7 @@
     }
 
     // Function to render line chart using Chart.js
-    function renderChart(labels, values) {
+    function renderChart(labels, values, label, color) {
         // Destroy existing chart instance if exists
         if (chartInstance) {
             chartInstance.destroy();
@@ -211,14 +195,18 @@
             data: {
                 labels: labels,
                 datasets: [{
-                    label: 'Occurrences',
+                    label: label, // Use provided label
                     data: values,
-                    borderColor: 'rgba(255, 99, 132, 1)',
-                    borderWidth: 1
+                    borderColor: color, // Use provided color
+                    borderWidth: 1,
+                    fill: false // Remove fill color
                 }]
             },
             options: {
                 scales: {
+                    x: {
+                        display: false // Hide x-axis labels
+                    },
                     y: {
                         beginAtZero: true
                     }
@@ -226,44 +214,6 @@
             }
         });
     }
-
-    // Function to render list of x-axis elements
-    function renderList(labels) {
-        var listContainer = document.getElementById('chart-list');
-        listContainer.innerHTML = ''; // Clear previous list items
-        labels.forEach(label => {
-            var listItem = document.createElement('li');
-            var checkbox = document.createElement('input');
-            checkbox.type = 'checkbox';
-            checkbox.addEventListener('change', function() {
-                highlightInstance(label, this.checked);
-            });
-            listItem.appendChild(checkbox);
-            listItem.appendChild(document.createTextNode(label));
-            listContainer.appendChild(listItem);
-        });
-    }
-
-    // Function to highlight instance on line chart
-    function highlightInstance(label, checked) {
-        if (checked) {
-            // Highlight instance on line chart
-            var index = chartInstance.data.labels.indexOf(label);
-            if (index !== -1) {
-                var dataset = chartInstance.data.datasets[0];
-                var backgroundColors = Array(chartInstance.data.labels.length).fill('rgba(0, 0, 0, 0)');
-                backgroundColors[index] = 'rgba(255, 99, 132, 0.2)';
-                dataset.backgroundColor = backgroundColors;
-                chartInstance.update();
-            }
-        } else {
-            // Remove highlight
-            var dataset = chartInstance.data.datasets[0];
-            dataset.backgroundColor = Array(chartInstance.data.labels.length).fill('rgba(0, 0, 0, 0)');
-            chartInstance.update();
-        }
-    }
 </script>
 </body>
 </html>
-
